--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
 ]
 
 [tool.poetry]
-version = "0.0.2"
+version = "0.0.3a"
 packages = [{include = "physioprep", from = "src"}]
 
 [tool.poetry.group.dev.dependencies]
